--- a/novo/home-1.html
+++ b/novo/home-1.html
@@ -549,8 +549,8 @@
                             </div>
                         </div>
 
-                        <h2 class="mil-center mil-up mil-mb-60">Nossos <span class="mil-thin">clientes:</span> <br>Veja
-                            <span class="mil-thin">o que eles dizem!</span>
+                        <h2 class="mil-center mil-up mil-mb-60">Nossos <span class="mil-thin">clientes:</span> <br>Conheça 
+                            <span class="mil-thin">alguns dos nossos parceiros!</span>
                         </h2>
 
                         <div class="mil-revi-pagination mil-up mil-mb-60"></div>
@@ -566,7 +566,15 @@
                                 <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 48 48"
                                     class="mil-quote-icon mil-up">
                                     <path
-                                        d="M 13.5 10 A 8.5 8.5 0 0 0 13.5 27 A 8.5 8.5 0 0 0 18.291016 25.519531 C 17.422273 29.222843 15.877848 31.803343 14.357422 33.589844 C 12.068414 36.279429 9.9433594 37.107422 9.9433594 37.107422 A 1.50015 1.50015 0 1 0 11.056641 39.892578 C 11.056641 39.892578 13.931586 38.720571 16.642578 35.535156 C 19.35357 32.349741 22 27.072581 22 19 A 1.50015 1.50015 0 0 0 21.984375 18.78125 A 8.5 8.5 0 0 0 13.5 10 z M 34.5 10 A 8.5 8.5 0 0 0 34.5 27 A 8.5 8.5 0 0 0 39.291016 25.519531 C 38.422273 29.222843 36.877848 31.803343 35.357422 33.589844 C 33.068414 36.279429 30.943359 37.107422 30.943359 37.107422 A 1.50015 1.50015 0 1 0 32.056641 39.892578 C 32.056641 39.892578 34.931586 38.720571 37.642578 35.535156 C 40.35357 32.349741 43 27.072581 43 19 A 1.50015 1.50015 0 0 0 42.984375 18.78125 A 8.5 8.5 0 0 0 34.5 10 z"
+                                        d="M 13.5 10 A 8.5 8.5 0 0 0 13.5 27 A 8.5 8.5 0 0 0 18.291016 25.519531 C 17.422273 
+                                        29.222843 15.877848 31.803343 14.357422 33.589844 C 12.068414 36.279429 9.9433594 
+                                        37.107422 9.9433594 37.107422 A 1.50015 1.50015 0 1 0 11.056641 39.892578 C 11.056641 
+                                        39.892578 13.931586 38.720571 16.642578 35.535156 C 19.35357 32.349741 22 27.072581 
+                                        22 19 A 1.50015 1.50015 0 0 0 21.984375 18.78125 A 8.5 8.5 0 0 0 13.5 10 z M 34.5 10 A 8.5 8.5 0 0 0 
+                                        34.5 27 A 8.5 8.5 0 0 0 39.291016 25.519531 C 38.422273 29.222843 36.877848 31.803343 35.357422 
+                                        33.589844 C 33.068414 36.279429 30.943359 37.107422 30.943359 37.107422 A 1.50015 1.50015 0 1 0 32.056641 
+                                        39.892578 C 32.056641 39.892578 34.931586 38.720571 37.642578 35.535156 C 40.35357 32.349741 43 27.072581 
+                                        43 19 A 1.50015 1.50015 0 0 0 42.984375 18.78125 A 8.5 8.5 0 0 0 34.5 10 z"
                                         fill="#000000" />
                                 </svg>
 
@@ -668,16 +676,8 @@
                                             src="img/partners/Agro.webp" alt="Agro"></a>
                                 </div>
                                 <div class="swiper-slide">
-                                    <a href="#." class="mil-partner-frame" style="width: 120px;"><img
-                                            src="img/partners/HCR.png" alt="Hcr"></a>
-                                </div>
-                                <div class="swiper-slide">
                                     <a href="#." class="mil-partner-frame" style="width: 170px;"><img
                                             src="img/partners/Copama.webp" alt="Copama"></a>
-                                </div>
-                                <div class="swiper-slide">
-                                    <a href="#." class="mil-partner-frame" style="width: 120px;"><img
-                                            src="img/partners/friron.png" alt="Friron"></a>
                                 </div>
                                 <div class="swiper-slide">
                                     <a href="#." class="mil-partner-frame" style="width: 190px;"><img
@@ -721,7 +721,7 @@
                             <div class="col-lg-4 mil-relative mil-mb-90">
 
                                 <h2 class="mil-up mil-mb-30">Benefícios que você <br>receberá</h2>
-                                <p class="mil-up mil-mb-30">Em nossa empresa, adotamos uma abordagem única para soluções
+                                <p class="mil-up mil-mb-30">Na COOGD, adotamos uma abordagem única para soluções
                                     em energia. Acreditamos em oferecer serviços que não apenas sejam eficientes e
                                     confiáveis, mas que também proporcionem desempenho superior, segurança,
                                     sustentabilidade e inovação tecnológica. Nosso compromisso é entregar resultados que
@@ -747,8 +747,8 @@
 
                                     </div>
                                     <div class="mil-accordion-content">
-                                        <p class="mil-mb-30">No ano de 2021 geramos mais de R$ 2.500.000,00 em economia
-                                            para os nossos cooperados com economia de até 20% nas faturas de energia.
+                                        <p class="mil-mb-30">Já geramos mais de R$ 14.000.000,00 
+                                            em economia para os nossos cooperados, que economizaram até 20% nas faturas de energia..
                                         </p>
                                     </div>
                                 </div>
@@ -856,16 +856,16 @@
                                                 <p class="mil-stat-label">Criado em</p>
                                             </div>
                                             <div class="col-md-6 col-lg-7 mil-stat-item">
-                                                <h2 class="mil-stat-number" data-target="100">0</h2>
+                                                <h2 class="mil-stat-number" data-target="700">0</h2>
                                                 <p class="mil-stat-label">Clientes Satisfeitos</p>
                                             </div>
                                             <div class="col-md-6 col-lg-7 mil-stat-item">
-                                                <h2 class="mil-stat-number" data-target="10000">0<span class="mil-stat-suffix">Kw</span>
+                                                <h2 class="mil-stat-number" data-target="12000000">0<span class="mil-stat-suffix">Kw</span>
                                                 </h2>
                                                 <p class="mil-stat-label">Capacidade instalada</p>
                                             </div>
                                             <div class="col-md-6 col-lg-7 mil-stat-item">
-                                                <h2 class="mil-stat-number" data-target="11">0</h2>
+                                                <h2 class="mil-stat-number" data-target="14">0</h2>
                                                 <p class="mil-stat-label">Milhões Poupados</p>
                                             </div>
                                         </div>
